overflow for neighbors fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -392,6 +392,9 @@ form {
   }
 }
 
+.content {
+    overflow: scroll;
+}
 #logout {
   height: 15% !important;
   text-align: center;
